# monkeybun-backend-service

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  testing.md
.cursor/rules/: code-standards.mdc  style-guide.mdc
.github/workflows/: deploy.yml
docs/: README.md  alembic.md  gcp_deploy.md  resend_setup.md  testing.md
postman/: Monkeybun Backend Service.postman_collection.json
scripts/: delete-github-actions.sh  upload_key_to_github.sh  upload_secrets_to_gcp.sh
src/: main.py
src/common/: config.py  constants.py  logger.py
src/common/utils/: exception_handlers.py  response.py  routes.py  s3_url.py
src/database/dependency/: db_dependency.py
src/database/postgres/: postgres_client.py
src/database/postgres/migrations/: env.py
src/database/postgres/models/: db_models.py
src/database/s3/: s3_client.py
src/downstream/google/: dependency.py  google_places_client.py
src/downstream/resend/: dependency.py  resend_email_client.py
src/downstream/supabase/: dependency.py  supabase_admin_client.py
src/module/application/controller/: application_controller.py
src/module/application/dependency/: application_dependency.py
src/module/application/schema/: application_schema.py
src/module/application/service/: application_service.py  email_service.py
src/module/attendance/controller/: attendance_controller.py
src/module/attendance/dependency/: attendance_dependency.py
src/module/attendance/schema/: attendance_schema.py
src/module/attendance/service/: attendance_service.py
(+44 files in other folders)
