[project]
name = "monkeybun-backend-service"
version = "0.1.0"
description = "Monkeybun Backend Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.10.1",
    "fastapi[standard]>=0.116.1",
    "colorama>=0.4.6",
    "httpx>=0.25.0",
    "python-dotenv>=1.1.1",
    "pyjwt[crypto]>=2.8.0",
    "boto3>=1.40.35",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "supabase>=2.20.0",
    "resend>=2.19.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
]
